# Tasks

./: pyproject.toml
config/: settings.py  urls.py
task/: models.py  serializers.py  views.py
